--- a/desafios/desafio011/style.css
+++ b/desafios/desafio011/style.css
@@ -6,6 +6,12 @@
     margin: 0px;
 }
 
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 html, body {
     min-height: 100vh;
     background-color: darkgray;
@@ -17,19 +23,19 @@ header {
 }
 
 h1 {
-    font-family: 'Passion One', cursive;
+    font-family: var(--font2);
     font-variant: small-caps;
     text-align: center;
-    font-size: 100px;
+    font-size: 10vw;
     letter-spacing: 2px;
     margin: 0px;
     padding-top: 50px;
 }
 
 header>p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--font1);
     text-align: center;
-    font-size: 18px;
+    font-size: 2vw;
     font-weight: lighter;
     padding-bottom: 50px;
 }
@@ -45,9 +51,9 @@ a:hover {
 }
 
 main {
-    font-family: 'Sriracha', cursive;
+    font-family: var(--font3);
     
-    font-size: 50px;
+    font-size: 4vw;
 }
 
 section {
@@ -63,17 +69,39 @@ section.normal {
 
 section.imagem {
     background-image: url(/imagens/background001.jpg);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.692);
 }
 
 section.imagem > p {
-   width: 700px;
-    background-color: lightgray;
+    display: inline-block;
+    padding: 10px;
+    background-color: rgba(15, 9, 9, 0.308);
+    text-shadow: 1px 1px 0px black;
+    
+}
+
+section.imagem#img01 {
+    background-image: url(./imagens/background001.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
+    box-shadow: black;
+}
+
+section.imagem#img02 {
+    background-image: url(./imagens/background002.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
 }
 
 footer {
     background-color: black;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--font1);
     text-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
